--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,7 @@ name: Plugin
 version: '${project.version}'
 main: me.melarn.plugin.Plugin
 api-version: 1.19
+commands:
+  get:
+    description: gets
+    usage: /команда <аргумент>
